@@ -8,8 +8,12 @@ use Crypt::Passphrase -encoder;
 use Carp 'croak';
 
 my @possibilities = (
+	['3' , '$3$'              ,  0, '$3$$8846f7eaee8fb117ad06bdd830b7586c'],
 	['',   ''                 ,  2, 'abJnggxhB/yWI' , '%s%s'],
+	['_',  '_EQ0.'            ,  3, '_EQ0.jzhSVeUyoSqLupI', '%s%s'],
 	['1' , '$1$'              ,  6, '$1$aaaaaa$FuYJ957Lgsw.eVsENqOok1'                                                                ],
+	['md5', '$md5,rounds=5000$', 6, '$md5,rounds=5000$GUBv0xjJ$$PI9W.MLvhYh0hQMCkz1CH/', '%s%s$'],
+	['sha1', '$sha1$40000$'   ,  6, '$sha1$40000$jtNX3nZ2$hBNaIXkt4wBI2o5rsi8KejSjNqIq'],
 	['5' , '$5$rounds=535000$', 12, '$5$aaaaaa$9hHgJfCniK4.dU43ykArHVETrhKDDElbS.cioeCajw.'                                           ],
 	['6' , '$6$rounds=656000$', 12, '$6$aaaaaa$RgJSheuY/DBadaBm/5gQ.s3M9a/2n8gubwCE41kMiz1P4KcxORD6LxY2NUCuOQNZawfiD8tWWfRKg9v0CQjbH0'],
 	['2x', '$2x$12$'          , 16, '$2x$08$......................qrjEXaz4RUVmquy3IT5eLKXLB28ahI2'                                    ],
@@ -39,6 +43,8 @@ sub new {
 	if (defined($settings = $args{settings})) {
 		if ($settings eq '') {
 			($salt_size, $format) = (2, '%s%s');
+		} elsif ($settings eq '_') {
+			($salt_size, $format) = (3, '%s%s');
 		} else {
 			my $type = $settings =~ /\A \$ ([^\$]+) \$ /x or croak "Invalid settings string '$settings'";
 			$salt_size = $args{salt_size} // $algorithm{$type}{salt_size} // 16;
@@ -90,11 +96,19 @@ sub hash_password {
 	return crypt $password, $settings;
 }
 
-my $descrypt = qr{ \A [./0-9A-Za-z]{13} \z }x;
+my $descrypt = qr{ \A [./0-9A-Za-z]{13}  \z }x;
+
+my @formats;
+push @formats, $descrypt if $algorithm{''};
+push @formats, qr{ \A _[./0-9A-Za-z]{19} \z }x if $algorithm{'_'};
 
 sub accepts_hash {
 	my ($self, $hash) = @_;
-	return $hash =~ $descrypt || $self->SUPER::accepts_hash($hash);
+	return 1 if $self->SUPER::accepts_hash($hash);
+	for my $format (@formats) {
+		return 1 if $hash =~ $format;
+	}
+	return 0;
 }
 
 sub crypt_subtypes {
@@ -126,7 +140,7 @@ This class implements a Crypt::Passphrase encoder around your system's C<crypt()
 
 Note that the supported algorithms depend entirely on your platform. The only option portable among unices (descrypt) is not considered safe at all. It will try to pick a good default among the supported options. Because the different algorithms take different parameters they will have to be passed as a settings string if anything else is desired.
 
-By default it uses the first supported algorithm in this list: C<yescript>, C<scrypt>, C<bcrypt>, C<SHA512crypt>, C<SHA256crypt>, C<MD5crypt> and C<descrypt>.
+By default it uses the first supported algorithm in this list: C<yescript>, C<scrypt>, C<bcrypt>, C<SHA512crypt>, C<SHA256crypt>, C<SHA1crypt>, C<MD5crypt>, extended C<descrypt>, C<descrypt> and C<NTHASH>.
 
 =head2 Configuration
 
@@ -170,11 +184,29 @@ C<SHA256crypt>
 
 This algorithm originated on Linux but is also supported on some BSDs and Solaris.
 
+=item * C<'sha1'>
+
+C<SHA1crypt>
+
+This algorithm is supported on NetBSD and Linux systems using C<libxcrypt>.
+
 =item * C<'1'>
 
 C<MD5crypt>
 
 This is supported on Linux, many BSDs and Solaris.
+
+=item * C<'md5'>
+
+Solaris C<MD5crypt>.
+
+This is supported on Solaris and Linux systems using C<libxcrypt>.
+
+=item * C<'_'>
+
+Extended C<descrypt>.
+
+This is supported on Linux, BSD and Mac OS.
 
 =item * C<''>
 
@@ -182,7 +214,13 @@ C<descrypt>
 
 This is the only algorithm that is universally supported. Unfortunately it's also incredably unsafe and should not be used in production.
 
-Note that unlike all other supported algorithms this lacks a crypt header
+Note that unlike all other supported algorithms this lacks a crypt header.
+
+=item * C<'$3$'>
+
+C<NTHASH>
+
+This saltless algorithm originates in the Microsoft world. It's supported on FreeBSD and Linux systems using C<libxcrypt>.
 
 =back
 
